PP-11385 PR fixes